--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "metrics-demo",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Quick and simple prometheus metrics demo",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
