--- a/manifests/monitoring.yaml
+++ b/manifests/monitoring.yaml
@@ -325,6 +325,10 @@ data:
       - source_labels: [__meta_kubernetes_pod_name]
         action: replace
         target_label: kubernetes_pod_name
+    - job_name: 'mighty-fine-fe'
+      static_configs:
+      - targets: [  'mighty-fine-fe:3000' ]
+
 kind: ConfigMap
 metadata:
   name: prometheus-configmap
