--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -11,10 +11,11 @@ spec:
     spec:
       containers:
       - name: mighty-fine
-        image: quay.io/brice/metrics-demo:v2-default-metrics
+        image: mighty-fine:v1
         ports:
         - containerPort: 3000
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: mighty-fine-fe
@@ -24,5 +25,6 @@ spec:
     app: mighty-fine-fe
   ports:
     - port: 3000
+      name: http
       targetPort: 3000
       nodePort: 30001
