--- a/manifests/monitoring.yaml
+++ b/manifests/monitoring.yaml
@@ -23,6 +23,7 @@ spec:
           name: prometheus-configmap
 
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
@@ -64,6 +65,7 @@ spec:
         ports:
         - containerPort: 3000
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: grafana 
