--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Quick and simple prometheus metrics demo",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "test": "mocha . --exit"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,9 @@
     "epimetheus": "^1.0.54",
     "express": "^4.15.4",
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.5",
+    "supertest": "^3.0.0"
   }
 }
