--- a/manifests/gke/service.yaml
+++ b/manifests/gke/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mighty-fine-fe-lb
+  name: mighty-fine-fe
 spec:
   type: LoadBalancer
   selector:
