--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "body-parser": "^1.18.1",
     "epimetheus": "^1.0.54",
     "express": "^4.15.4",
-    "lodash": "^4.17.4",
-    "prom-client": "^11.0.0"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "mocha": "^5.0.5",
