--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,39 +1,57 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
+---
 version: 2
 jobs:
-  build:
+  test:
     docker:
-      # specify the version you desire here
       - image: circleci/node:9.10.0
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
     working_directory: ~/repo
-
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
       - run: yarn install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
-      # run tests!
       - run: yarn test
 
+  build:
+    environment:
+      IMAGE_NAME: quay.io/brice/metrics-demo
+      SHORT_GIT_HASH: $(echo $CIRCLE_SHA1 | cut -c -7)
+    steps:
+      - run:
+          name: Build Docker image
+          command: docker build -t $IMAGE_NAME:$CIRCLE_BRANCH-$SHORT_GIT_HASH .
 
+  publish:
+    environment:
+      IMAGE_NAME: quay.io/brice/metrics-demo
+      SHORT_GIT_HASH: $(echo $CIRCLE_SHA1 | cut -c -7)
+    docker:
+      - image: circleci/buildpack-deps:stretch
+    steps:
+      - setup_remote_docker
+      - run:
+          name: Publish Docker Image to Quay.io
+          command: |
+            echo "$QUAY_PASS" | docker login quay.io -u "$QUAY_USERNAME" --password-stdin
+            docker push $IMAGE_NAME:$CIRCLE_BRANCH-$SHORT_GIT_HASH
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - test
+      - build:
+          requires: [test]
+      - publish:
+          requires: [build]
+          filters:
+            branches:
+              only: master
