--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           name: Archive Docker image
           command: docker save -o image.tar $IMAGE_NAME:$CIRCLE_BRANCH-$(echo $CIRCLE_SHA1 | cut -c -7)
       - persist_to_workspace:
+          name: Save docker image to workspace
           root: .
           paths:
             - ./image.tar
